20241008 1550 "예매 진행 중, 유저 로그인 폼 하기"

--- a/src/main/resources/static/less/page.less
+++ b/src/main/resources/static/less/page.less
@@ -605,7 +605,7 @@ img.full-size{
 								width: 100%;
 								margin: 25px 0 35px 0;
 								height: 45px;
-								background-image: url(../images/ScreenForSeating_450.png);
+								background-image: url(../images/order-arrow.png);
 								background-repeat: no-repeat;
 								display: block;
 								content: '';
