--- a/src/main/resources/templates/profile/main.html
+++ b/src/main/resources/templates/profile/main.html
@@ -1330,7 +1330,7 @@
                             <span class="ph ph-tag text-xl"></span>
                             <strong class="heading6">My Address</strong>
                         </a>
-                        <a th:href="@{#}" class="category-item flex items-center gap-3 w-full px-5 py-4 rounded-lg cursor-pointer duration-300 hover:bg-white mt-1.5" th:data-item="${setting}">
+                        <a th:href="@{profile/setting}" class="category-item flex items-center gap-3 w-full px-5 py-4 rounded-lg cursor-pointer duration-300 hover:bg-white mt-1.5" th:data-item="${setting}">
                             <span class="ph ph-gear-six text-xl"></span>
                             <strong class="heading6">Setting</strong>
                         </a>
