241010 1216 관리자페이지 - review 페이지 완성, 수정하기 기능 추가 필요

--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -40,7 +40,7 @@
                         <!-- Topbar Brand Logo -->
                         <div class="logo-topbar">
                             <!-- Logo light -->
-                            <a th:href="@{/}" class="logo-light">
+                            <a th:href="@{/api/admin}" class="logo-light">
                                 <span class="logo-lg">
                                     <img th:src="@{/admin/assets/images/logo.jpeg}" alt="logo">
                                 </span>
@@ -50,7 +50,7 @@
                             </a>
 
                             <!-- Logo Dark -->
-                            <a th:href="@{/}" class="logo-dark">
+                            <a th:href="@{/api/admin}" class="logo-dark">
                                 <span class="logo-lg">
                                     <img th:src="@{/admin/assets/images/logo-dark.png}" alt="dark logo">
                                 </span>
@@ -430,7 +430,7 @@
             <div class="leftside-menu">
 
                 <!-- Brand Logo Light -->
-                <a href="index.html" class="logo logo-light">
+                <a th:href="@{/api/admin}" class="logo logo-light">
                     <span class="logo-lg">
                         <img th:src="@{/admin/assets/images/logo.png}" alt="logo">
                     </span>
@@ -440,7 +440,7 @@
                 </a>
 
                 <!-- Brand Logo Dark -->
-                <a href="index.html" class="logo logo-dark">
+                <a th:href="@{/api/admin}" class="logo logo-dark">
                     <span class="logo-lg">
                         <img th:src="@{/admin/assets/images/logo-dark.png}" alt="dark logo">
                     </span>
