241010 1254 관리자페이지와 변경한 페이지 템플릿 연결 완료

--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -476,34 +476,22 @@
                                         <a th:href="@{/api/admin/pages-starter}">Starter Page</a>
                                     </li>
                                     <li>
-                                        <a href="pages-contact-list.html">Contact List</a>
+                                        <a th:href="@{/api/admin/movie}">Movie</a>
                                     </li>
                                     <li>
-                                        <a href="pages-profile.html">Profile</a>
+                                        <a th:href="@{/api/admin/theater}">Theater</a>
                                     </li>
                                     <li>
-                                        <a href="pages-timeline.html">Timeline</a>
+                                        <a th:href="@{/api/admin/schedule}">Schedule</a>
                                     </li>
                                     <li>
-                                        <a href="pages-invoice.html">Invoice</a>
+                                        <a th:href="@{/api/admin/user}">User</a>
                                     </li>
                                     <li>
-                                        <a href="pages-faq.html">FAQ</a>
+                                        <a th:href="@{/api/admin/reservation}">Reservation</a>
                                     </li>
                                     <li>
-                                        <a href="pages-pricing.html">Pricing</a>
-                                    </li>
-                                    <li>
-                                        <a href="pages-maintenance.html">Maintenance</a>
-                                    </li>
-                                    <li>
-                                        <a href="error-404.html">Error 404</a>
-                                    </li>
-                                    <li>
-                                        <a href="error-404-alt.html">Error 404-alt</a>
-                                    </li>
-                                    <li>
-                                        <a href="error-500.html">Error 500</a>
+                                        <a th:href="@{/api/admin/review}">Review</a>
                                     </li>
                                 </ul>
                             </div>
