--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -144,9 +144,9 @@
     </div>
 
     <!-- Include jQuery and Scripts -->
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/packages.min.js"></script>
-    <script type="text/javascript" src="js/scripts.min.js"></script>
+    <script type="text/javascript" th:src="@{/js/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/packages.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/scripts.min.js}"></script>
 <!-- jQuery easing plugin -->
 </body>
 </html>
